php/silverstripe/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: silverstripe
  labels:
    app: silverstripe
spec:
  ports:
  - port: 80
  selector:
    app: silverstripe
